# claude-code-remembers

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  start-remember.sh
scripts/: claude-remembers  memoryd.sh  remember.sh  setup-mcp.sh
src/: daemon.rs  main.rs
src/api/: haiku.rs  mod.rs
src/consolidate/: consolidation_loop.rs  decay.rs  mod.rs
src/context/: generator.rs
src/db/: consolidations.rs  fts.rs  memories.rs  mod.rs  schema.rs
src/ingest/: dedup.rs  mod.rs  pipeline.rs
src/ipc/: handler.rs  protocol.rs
src/mcp/: server.rs
